mejora del scroll horizontal

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,9 @@
   padding: 20px;
   text-align: center;
   flex-direction: row;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .menu ul {
@@ -84,7 +87,10 @@ footer {
   font-size: 14px;
   z-index: 1000;
 }
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
+  .menu{
+    position: static;
+  }
   .menu ul {
     flex-direction: column;
     gap: 12px;
