--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,3 +290,98 @@ h1 {
   transform: scale(1.1);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
+/* estilos para dopcion */
+
+.cards-adop {
+    padding: 10px;
+}
+.card-adop {
+    display: flex;
+    background: #fff;
+    border: 4px solid #e2f5cc;
+    border-radius: 10px;
+    max-width: 900px;
+    width: 100%;
+    margin: 20px auto;
+    padding: 15px;
+    gap: 15px;
+}
+
+.card-adop:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+
+.card-img {
+    width: 250px;
+    max-width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.Title-adop {
+    font-size: 14px;
+    text-align: center;
+    font-family: "Fredoka", sans-serif;
+    font-size: 2rem;
+    padding: 20px;
+    color: #555;
+}
+.card-content {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.card-content h2 {
+    font-family: "Fredoka", sans-serif;
+}
+
+.info {
+    display: inline-flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.left, .right {
+    font-size: 14px;
+    font-family: "Nunito", sans-serif;
+    font-size: 0.95rem;
+    line-height: 1.5;
+    color: #555;
+    margin-top:15px;
+    margin-right: 90px;
+    margin-right: 90px;
+    margin-bottom: 15px;
+}
+
+.btn {
+    background: #e2f5cc;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+@media (max-width: 768px) {
+    .cards-adop {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .card-img {
+        width: 100%;
+        max-height: 250px;
+    }
+
+    .info {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .left, .right {
+        width: 100%;
+    }
