--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --fuente-base: "monstserrat", sans-serif;
+  --fuente-secundaria: "nunito", sans-serif;
+  --fuente-terciaria: "krona one", sans-serif;
+  --fuente-adicional: "fredoka", sans-serif;
+  --color-primario: #e2f5cc;
+  --color-secundario: #d8edc0;
+}
 
 .menu {
-  background-color: #e2f5cc;
+  background-color: var(--color-primario);
   color: #000;
   padding: 20px;
   text-align: center;
@@ -32,14 +40,14 @@
 }
 .menu li a {
   text-decoration: none;
-  font-family: "Krona One", sans-serif;
+  font-family: var(--fuente-terciaria);
   color: #333;
   padding: 10px 15px;
   border-radius: 6px;
   transition: all 0.3s ease;
 }
 .menu li a:hover {
-  background-color: #d8edc0;
+  background-color: var(--color-secundario);
   color: #000;
   transition: 0.3s ease;
   transform: scale(1.05);
@@ -66,14 +74,14 @@ body {
   width: 80px;
   height: 4px;
   margin-top: 8px;
-  background-color: #e2f5cc;
+  background-color: var(--color-primario);
   border-radius: 2px;
 }
 main {
-  font-family: "Nunito", sans-serif;
+  font-family: var(--fuente-secundaria);
 }
 footer {
-  background-color: #e2f5cc;
+  background-color: var(--color-primario);
   color: #333;
   margin-top: auto;
   text-align: center;
@@ -127,30 +135,7 @@ footer {
   transition: 0.3s ease;
   transform: scale(1.05);
 }
-article {
-  background-color: #fff;
-  border-radius: 12px;
-  padding: 20px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.productos ul li img {
-  width: 200px;
-  height: auto;
-  border-radius: 8px;
-}
-.higiene ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: auto;
-  align-items: center;
-  gap: 20px;
-  flex-wrap: nowrap;
-  list-style: none;
-  overflow-x: auto;
-  overflow-y: hidden;
-  scroll-behavior: auto;
-}
+
 .scroll-container {
   display: flex;
   flex-direction: row;
@@ -289,4 +274,16 @@ h1 {
 .card img:hover {
   transform: scale(1.1);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.container img {
+  width: 10%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  border: 2px solid white;
+  transition: all ease-in-out 0.5s;
+}
+.container img:hover {
+  width: 25%;
 }
