--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,11 @@
 /* ====== Variables CSS ====== */
 :root {
   /* Colores */
-  --fondo-gradiente: linear-gradient(to bottom, #a8e6cf,#dcedc1 ); /* degradado verde suave */
+  --fondo-gradiente: linear-gradient(
+    to bottom,
+    #a8e6cf,
+    #dcedc1
+  ); /* degradado verde suave */
   --color-primario: #a8e6cf; /* verde suave */
   --color-secundario: #56c596; /* verde más fuerte */
   --color-terciario: #fff; /* blanco para los productos*/
@@ -121,34 +125,50 @@ footer {
 }
 
 .contenido-inicio {
-  max-width: 700px;
+  max-width: 900px;
+  width: 70%;
+  height: 80%;
+  border-top: 2px solid #ffffff75;
+  border-bottom: 2px solid #ffffff75;
+  box-shadow: 5px 5px 12px #00000075;
+  background: #ffffff25;
+  border-radius: 15px;
+  overflow: hidden;
+  backdrop-filter: blur(4px);
+  padding: 40px;
 }
 
 .inicio h1 {
   font-family: var(--fuente-titulo);
   font-size: 3rem;
   margin-bottom: 15px;
+  color: var(--color-texto);
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.inicio p {
-  font-family: var(--fuente-secundaria);
+.inicio .mensaje {
+  font-family: "Yellowtail", cursive;
   font-size: 1.1rem;
   line-height: 1.6;
   margin-bottom: 30px;
+  color: var(--color-texto);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .botones-inicio {
   display: flex;
+  list-style: none;
   gap: 20px;
   justify-content: center;
   flex-wrap: wrap;
 }
 @media (max-width: 768px) {
-  .hero h1 {
+  .inicio h1 {
     font-size: 2.2rem;
   }
 
-  .hero p {
+  .inicio .mensaje {
     font-size: 1rem;
   }
 }
@@ -161,7 +181,7 @@ footer {
 .filtrobar ul {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: right;
   align-items: center;
   margin-bottom: 20px;
   gap: 16px;
@@ -475,4 +495,3 @@ h1 {
 /* ===== Estilos Sobre Nosotros ====== */
 
 /* ===== Estilos Contacto ====== */
-
